# test-sec-tools

./: .dockerignore  .gitignore  Dockerfile  main.py  main.tf  pyproject.toml
.github/workflows/: deploy.yml
myapp/: models.py  serializers.py  urls.py
myapp/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
